# ament_cmake-release

./: 0001-Bootstrap-PYTHONPATH.patch  0001-Manually-add-custom-PYTHONPATH.patch  0001-Migrate-patch-from-Eloquent.patch  0001-Restore-PYTHONPATH-bootstrap-patch-to-ament_cmake_co.patch  0002-Detect-Python-3-version-at-build-time.patch  0002-Python-3.7-and-3.8-site-packages.patch  0002-Update-python-versions-in-PYTHONPATH-patch.patch  CHANGELOG.rst  CMakeLists.txt  README.md  ament_cmake_auto-extras.cmake  ament_cmake_gmock-extras.cmake  debian.store  package.xml  patches.conf  releaser_history.json  rolling.ignored  rpm.store  tracks.yaml
ament_cmake/: CHANGELOG.rst  CMakeLists.txt  package.xml
ament_cmake_auto/: CHANGELOG.rst  package.xml
ament_cmake_core/: CHANGELOG.rst  package.xml
ament_cmake_export_definitions/: CHANGELOG.rst  package.xml
ament_cmake_export_dependencies/: CHANGELOG.rst  package.xml
ament_cmake_export_include_directories/: CHANGELOG.rst  package.xml
ament_cmake_export_interfaces/: CHANGELOG.rst  package.xml
ament_cmake_export_libraries/: CHANGELOG.rst  package.xml
ament_cmake_export_link_flags/: CHANGELOG.rst  package.xml
ament_cmake_export_targets/: CHANGELOG.rst  package.xml
ament_cmake_gen_version_h/: CHANGELOG.rst  CMakeLists.txt  ament_cmake_gen_version_h-extras.cmake  package.xml
ament_cmake_gmock/: CHANGELOG.rst  package.xml
ament_cmake_google_benchmark/: CHANGELOG.rst  package.xml
ament_cmake_gtest/: CHANGELOG.rst  ament_cmake_gtest-extras.cmake  package.xml
ament_cmake_include_directories/: CHANGELOG.rst  package.xml
ament_cmake_libraries/: CHANGELOG.rst  package.xml
ament_cmake_nose/: CHANGELOG.rst  package.xml
ament_cmake_pytest/: CHANGELOG.rst  package.xml
ament_cmake_python/: CHANGELOG.rst  ament_cmake_python-extras.cmake  package.xml
ament_cmake_python_test/: CHANGELOG.rst  package.xml
ament_cmake_python_test/test/ament_python_test_package_overlay/: __init__.py  main.py
ament_cmake_target_dependencies/: CHANGELOG.rst  ament_cmake_target_dependencies-extras.cmake  package.xml
ament_cmake_test/: CHANGELOG.rst  package.xml
ament_cmake_vendor_package/: CHANGELOG.rst  package.xml
ament_cmake_version/: CHANGELOG.rst  package.xml
cmake/: ament_auto_add_library.cmake  ament_auto_package.cmake
debian/: changelog  control  copyright  gbp.conf  rules  rules.em
rpm/: ros-humble-ament-cmake-auto.spec  ros-humble-ament-cmake-core.spec  ros-humble-ament-cmake-export-definitions.spec  ros-humble-ament-cmake-export-dependencies.spec  ros-humble-ament-cmake-export-include-directories.spec  ros-humble-ament-cmake-export-interfaces.spec  ros-humble-ament-cmake-export-libraries.spec  ros-humble-ament-cmake-export-link-flags.spec  ros-humble-ament-cmake-export-targets.spec  ros-humble-ament-cmake-gen-version-h.spec  ros-humble-ament-cmake-gmock.spec  ros-humble-ament-cmake-google-benchmark.spec  ros-humble-ament-cmake-gtest.spec  ros-humble-ament-cmake-include-directories.spec  ros-humble-ament-cmake-libraries.spec  ros-humble-ament-cmake-nose.spec  ros-humble-ament-cmake-pytest.spec  ros-humble-ament-cmake-python.spec  ros-humble-ament-cmake-target-dependencies.spec  ros-humble-ament-cmake-test.spec  ros-humble-ament-cmake-vendor-package.spec  ros-humble-ament-cmake-version.spec  ros-humble-ament-cmake.spec  ros-iron-ament-cmake-core.spec  ros-iron-ament-cmake-export-definitions.spec  ros-iron-ament-cmake-export-dependencies.spec  ros-iron-ament-cmake-export-include-directories.spec  (+94 more)
(+17 files in other folders)
