<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ament_cmake_python_test</name>
  <version>2.9.0</version>
  <description>Test package for ament_cmake_python.</description>

  <maintainer email="elnadav12@gmail.com">Nadav Elkabets</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_core</buildtool_depend>
  <build_depend>ament_cmake_pytest</build_depend>
  <build_depend>ament_cmake_python</build_depend>

  <buildtool_export_depend>ament_cmake_core</buildtool_export_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
